Fix link column title and gap between links from the footer

--- a/src/components/Footer/styles.module.less
+++ b/src/components/Footer/styles.module.less
@@ -46,7 +46,6 @@
 }
 
 .globalFooterSubtext,
-.globalFooterRightLink,
 .globalFooterBottomCopyrightText,
 .globalFooterCopyrightLink {
   font-size: var(--fontSize-1);
@@ -54,7 +53,9 @@
 }
 
 .globalFooterRightLink {
-  margin-top: 20px;
+  margin-top: 12px;
+  color: #B7C6DD;
+  font-size: var(--fontSize-0);
 
   &:hover {
     text-underline-offset: 4px;
@@ -66,6 +67,7 @@
   color: #ffffff;
   font-weight: 700;
   font-size: 1.125rem;
+  margin: 0 0 12px 0;
 }
 
 .globalFooterRight {
